# isabelle-deps

./: LICENSE  README.md  gengraph.sh  main.py  memo.md  pyproject.toml  script.py
demo/: InductTest-depgraph.mmd  InductTest.thy  STLC.thy  depgraph.mmd
isabelle_deps/: main.py
scripts/: gengraph.sh
