[tool.poetry]
name = "isabelle-deps"
version = "0.1.0"
description = ""
authors = ["sano <sano@ueda.info.waseda.ac.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
isabelle-deps = "isabelle_deps.main:main"
